Adjust,Reset,Copy

--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,36 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <css-doodle>
+      :doodle {
+      @grid: 1x3 / 100vmax;
+      position: absolute;
+      top: 0; left: 0;
+      z-index: -10;
+      }
+  
+      @size: 100% 150%;
+      position: absolute;
+  
+      background: @m(100, (
+      linear-gradient(transparent, @p(
+      #FFFDE1@repeat(2, @p([0-9a-f])),
+      #0F0000@repeat(2, @p([0-9a-f]))
+      ))
+      @r(0%, 100%) @r(0%, 100%) /
+      @r(1px) @r(23vmin)
+      no-repeat
+      ));
+  
+      will-change: transform;
+      animation: f 50s linear calc(-50s / @size() * @i()) infinite;
+      @keyframes f {
+      from { transform: translateY(-100%) }
+      to { transform: translateY(100%) }
+      }
+    </css-doodle>
+  
+    <script src="https://unpkg.com/css-doodle@0.6.1/css-doodle.min.js"></script>
+    <script src="https://unpkg.com/vue@next"></script>
   </body>
 </html>
